Override equals method for easier testing
Address the requested changes from #7638